[package]
name = "rust-addon"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS dependencies
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
sysinfo = "0.29.10"
serde = { version = "1.0", features = ["derive"] }
notify-rust = "4.9.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
